--- a/views/project.pug
+++ b/views/project.pug
@@ -8,26 +8,31 @@ block content
       .cell.small-6.medium-9.large-9
 
         //- Use interploation to dynamically add the project title.
-        h1 Title
-
+        h1 #{Title}
+        
         //- Use interploation to dynamically add the project description.
         p.lead.text-light
-          | Description
+          | #{Description}
 
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Technologies
 
         //- Use an `each` iterator to replace the li tags below and interploation to dynamically add the technologies used in each project.
         ul
-          li HTML
-          li CSS
-          li JavaScript
+          each item in Technologies
+            li= item
+
 
         //- Use template literals and interpolation to add URLs to the hrefs below so they link to the repo and the live version of each project.
-        a.button.expanded(href='') Live Demo
-        a.button.expanded(href='') GitHub Repo
+        - const live_link = Live_Link;
+        - const github_link = Github_Link;
+        a.button.expanded(href=live_link target='_blank') Live Demo
+        a.button.expanded(href=github_link target='_blank') GitHub Repo
     
     //- Replace the URLs in the src attributes below with template literals and interpolation to dynamically add three project images.  You only have to add one image.  But adding more images to show your app in different states demonstrates a level of thoroughness and professionalism that potential emplyers will like to see. 
-    img.image(src='https://placehold.it/1200x550')
-    img.image(src='https://placehold.it/1200x550')
-    img.image(src='https://placehold.it/1200x550')
+    each image in Images
+      img.image(src='' + image)
+   
+    //- img.image(src='https://placehold.it/1200x550')
+    //- img.image(src='https://placehold.it/1200x550')
+    //- img.image(src='https://placehold.it/1200x550')
