--- a/views/about.pug
+++ b/views/about.pug
@@ -8,40 +8,40 @@ block content
       .cell.small-6.medium-9.large-9
 
         //- Add your name.
-        h1 Name
+        h1 Micah Hobbs
 
         //- Feel free personalize the title below
         p.lead.text-light
-          | Full Stack JavaScript Developer.
+          | Aspiring Full Stack JavaScript Developer.
 
         //- Replace the boilerplate below with your Elevator pitch below.
         .portfolio-bio
           p
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
+            | This is a dummy portfolio site for project built using Node.js and Express.
+
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
 
         //- Replace the text in the li tags below with your own skills.  At this point, you should be able to list at least ten skills.
         ul
+          li HTML/CSS
+          li JavaScirpt
+          li Node
           li Express
-          li Other cool stuff
-          li Listing my skills
-          li Etc.
-          li Etc. 
-          li Etc.
+          li React
+          li SQL
+          li APIs
         h6 Contact Info
 
         //- Add your own contact info
         ul
-          li 555-555-1234
-          li email@email.com
+          li +61 0400 454 833
+          li micahthobbs@gmail.com
 
         //- Add URLs to the hrefs below to link to your social media accounts.
-        a.button.expanded(href='') LinkedIn
-        a.button.expanded(href='') GitHub
-        a.button.expanded(href='') Twitter
+        a.button.expanded(href='https://www.linkedin.com/in/micahthobbs/' target='_blank') LinkedIn
+        a.button.expanded(href='https://github.com/micahthobbs' target='_blank') GitHub
+        a.button.expanded(href='https://twitter.com/micahthobbs' target='_blank') Twitter
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
   
