--- a/views/index.pug
+++ b/views/index.pug
@@ -5,11 +5,11 @@ block content
     div
 
       //- Add a title or heading like My Portfolio, or Hey, Potential Employers, or Let's make the web great together! 
-      h1 Heading
+      h1 My Portfolio
 
       //- Add a description for your portfolio, what this project is, it's purpose, what it's suppossed to accomplish, etc. 
       p.lead.text-light
-        | Portfolio Description
+        | This is project portfolio site to showcase the previous projects that I have built throughout the Treehouse Full Stack JavaScript Techdegree.
   article.grid-container.portfolio-index
     
     .grid-x.grid-margin-x.small-up-2.medium-up-2.large-up-3
@@ -19,7 +19,7 @@ block content
       //- Use a combination of interpolation and template literals as needed to dynamically generate the the routes in the href, as well as the img's src and the projects title.
       
       //- Here's what the Pug for each project example should look like. 
-
+      
       .cell
         a(href='#')
           img.thumbnail(src='https://placehold.it/550x550')
