--- a/views/layout.pug
+++ b/views/layout.pug
@@ -22,7 +22,7 @@ html(class="no-js" lang="en" dir="ltr")
 
             //- Add text here to describe who you are, what you do, and why you are so aweome.
             p.text-light
-              | Digital specialist with pragmatic expertise in service design, user research, and web development.
+              | Digital practitioner with pragmatic experience in service design, user research, and web development.
 
             //- Add about page route to the href below. 
             a(href='/about') Learn More →
