404 page and some style changes

--- a/views/about.pug
+++ b/views/about.pug
@@ -17,7 +17,7 @@ block content
         //- Replace the boilerplate below with your Elevator pitch below.
         .portfolio-bio
           p
-            | This is a dummy portfolio site for project built using Node.js and Express.
+            | This is a dummy portfolio site for built for project using Node.js and Express. Check out my real site at micahthobbs.com
 
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
