--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@ p {
 }
 
 h5 {
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Roboto", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   letter-spacing: 2.5px;
   -webkit-text-transform: uppercase;
   text-transform: uppercase;
@@ -73,9 +73,9 @@ a:hover {
 }
 
 .portfolio-me a {
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Roboto", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 600;
-  color: #555;
+  color: lightgray;
   font-size: 13px;
   letter-spacing: 2.5px;
   -webkit-text-transform: uppercase;
@@ -93,7 +93,7 @@ a:hover {
 }
 
 .portfolio-breadcrumb a {
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Roboto", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 600;
   font-size: 13px;
   letter-spacing: 2.5px;
